--- a/jjb/sdc/sdc-dcae-d-ci.yaml
+++ b/jjb/sdc/sdc-dcae-d-ci.yaml
@@ -3,7 +3,6 @@
     name: sdc-dcae-d-ci
     project-name: 'sdc-dcae-d-ci'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-release-version-java-daily'
       - '{project-name}-{stream}-merge-java'
@@ -33,3 +32,12 @@
     mvn-params: '-Dsonar.branch={branch}'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m'
+
+- project:
+    name: sdc-dcae-d-ci-clm
+    jobs:
+      - gerrit-maven-clm
+    project: sdc/dcae-d/ci
+    project-name: 'sdc-dcae-d-ci'
+    branch: 'master'
+    mvn-settings: 'sdc-dcae-d-ci-settings'
