--- a/jjb/sdc/sdc-dcae-d-dt-be-property.yaml
+++ b/jjb/sdc/sdc-dcae-d-dt-be-property.yaml
@@ -3,7 +3,6 @@
     name: sdc-dcae-d-dt-be-property
     project-name: 'sdc-dcae-d-dt-be-property'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-release-version-java-daily'
       - '{project-name}-{stream}-merge-java'
@@ -29,3 +28,12 @@
     mvn-params: '-Dsonar.branch={branch}'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m'
+
+- project:
+    name: sdc-dcae-d-dt-be-property-clm
+    jobs:
+      - gerrit-maven-clm
+    project: sdc/dcae-d/dt-be-property
+    project-name: 'sdc-dcae-d-dt-be-property'
+    branch: 'master'
+    mvn-settings: 'sdc-dcae-d-dt-be-property-settings'
