--- a/jjb/sdc/sdc-dcae-d-dt.yaml
+++ b/jjb/sdc/sdc-dcae-d-dt.yaml
@@ -4,7 +4,6 @@
     project-name: 'sdc-dcae-d-dt'
     build-node: ubuntu1604-builder-4c-2g
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-release-version-java-daily'
       - '{project-name}-{stream}-merge-java'
@@ -34,3 +33,13 @@
     mvn-params: '-Dsonar.branch={branch}'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m'
+
+- project:
+    name: sdc-dcae-d-dt-clm
+    jobs:
+      - gerrit-maven-clm
+    project: sdc/dcae-d/dt
+    project-name: 'sdc-dcae-d-dt'
+    build-node: ubuntu1604-builder-4c-2g
+    branch: 'master'
+    mvn-settings: 'sdc-dcae-d-dt-settings'
