--- a/jjb/sdc/sdc-sdc-distribution-client.yaml
+++ b/jjb/sdc/sdc-sdc-distribution-client.yaml
@@ -4,7 +4,6 @@
     name: sdc-sdc-distribution-client
     project-name: 'sdc-sdc-distribution-client'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-release-version-java-daily'
       - '{project-name}-{stream}-merge-java'
@@ -31,3 +30,12 @@
     mvn-params: '-Dsonar.branch={branch}'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m'
+
+- project:
+    name: sdc-sdc-distribution-client-clm
+    jobs:
+      - gerrit-maven-clm
+    project: sdc/sdc-distribution-client
+    project-name: 'sdc-sdc-distribution-client'
+    branch: 'master'
+    mvn-settings: 'sdc-sdc-distribution-client-settings'
