--- a/jjb/sdc/sdc-sdc-titan-cassandra.yaml
+++ b/jjb/sdc/sdc-sdc-titan-cassandra.yaml
@@ -4,7 +4,6 @@
     name: sdc-sdc-titan-cassandra
     project-name: 'sdc-sdc-titan-cassandra'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-release-version-java-daily'
       - '{project-name}-{stream}-merge-java'
@@ -17,3 +16,12 @@
     archive-artifacts: ''
     build-timeout: 60
     maven-version: 'mvn35'
+
+- project:
+    name: sdc-sdc-titan-cassandra-clm
+    jobs:
+      - gerrit-maven-clm
+    project: sdc/sdc-titan-cassandra
+    project-name: 'sdc-sdc-titan-cassandra'
+    branch: 'master'
+    mvn-settings: 'sdc-sdc-titan-cassandra-settings'
