SDC-Refactor CLM project block
The clm job portion needs to be on its own
project section similar to the Sonar portion.

The reason behind this, is becuase we only want
this job to be running for master and no other
branches. Also, this is in preparation for the
work that is to come from global-jjb on application
names in CLM.

Change-Id: I18f3a31606675e47e1772a1d5681a2502929ff42
Issue-ID: CIMAN-213
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/sdc/sdc.yaml
+++ b/jjb/sdc/sdc.yaml
@@ -16,9 +16,6 @@
           docker-pom: 'pom.xml'
           mvn-profile: 'docker'
           mvn-params: '-DskipTests=true -Dnpm.registry=https://nexus.onap.org/content/repositories/npm/'
-      - gerrit-maven-clm:
-          build-timeout: 120
-          mvn-params: '-Dnpm.registry=https://nexus.onap.org/content/repositories/npm/'
     project: 'sdc'
     stream:
       - 'master':
@@ -42,3 +39,15 @@
     mvn-params: '-Djacoco.skip=false -Dsonar.branch={branch} -Dnpm.registry=https://nexus.onap.org/content/repositories/npm/'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m'
+
+- project:
+    name: sdc-clm
+    jobs:
+      - gerrit-maven-clm:
+          build-timeout: 120
+          mvn-params: '-Dnpm.registry=https://nexus.onap.org/content/repositories/npm/'
+    project: sdc
+    project-name: 'sdc'
+    build-node: ubuntu1604-docker-8c-8g
+    branch: 'master'
+    mvn-settings: 'sdc-settings'
