SDNC-Refactor CLM project block
The clm job portion needs to be on its own
project section similar to the Sonar portion.

The reason behind this, is becuase we only want
this job to be running for master and no other
branches. Also, this is in preparation for the
work that is to come from global-jjb on application
names in CLM.

Change-Id: If9113ca802b2facfe635e7a11dd3e08bce15c05a
Issue-ID: CIMAN-213
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/sdnc/sdnc-apps.yaml
+++ b/jjb/sdnc/sdnc-apps.yaml
@@ -3,7 +3,6 @@
     name: sdnc-apps
     project-name: 'sdnc-apps'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -57,3 +56,13 @@
     archive-artifacts: ''
     build-node: queue-docker-4c-4g
 
+
+- project:
+    name: sdnc-apps-clm
+    jobs:
+      - gerrit-maven-clm
+    project: sdnc/apps
+    project-name: 'sdnc-apps'
+    build-node: ubuntu1604-builder-4c-4g
+    branch: 'master'
+    mvn-settings: 'sdnc-apps-settings'
