--- a/jjb/sdnc/sdnc-northbound.yaml
+++ b/jjb/sdnc/sdnc-northbound.yaml
@@ -3,7 +3,6 @@
     name: sdnc-northbound
     project-name: 'sdnc-northbound'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -37,3 +36,13 @@
     mvn-settings: 'sdnc-northbound-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: sdnc-northbound-clm
+    jobs:
+      - gerrit-maven-clm
+    project: sdnc/northbound
+    project-name: 'sdnc-northbound'
+    build-node: ubuntu1604-builder-4c-4g
+    branch: 'master'
+    mvn-settings: 'sdnc-northbound-settings'
