SO-Refactor CLM project block
The clm job portion needs to be on its own
project section similar to the Sonar portion.

The reason behind this, is becuase we only want
this job to be running for master and no other
branches. Also, this is in preparation for the
work that is to come from global-jjb on application
names in CLM.

Change-Id: I6bd7db60496fcbfdd52993959c9b080cabe1b8a9
Issue-ID: CIMAN-213
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/so/so-libs.yaml
+++ b/jjb/so/so-libs.yaml
@@ -3,7 +3,6 @@
     name: so-libs
     project-name: 'so-libs'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -34,3 +33,12 @@
     mvn-settings: 'so-libs-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: so-libs-clm
+    jobs:
+      - gerrit-maven-clm
+    project: so/libs
+    project-name: 'so-libs'
+    branch: 'master'
+    mvn-settings: 'so-libs-settings'
