--- a/jjb/so/so.yaml
+++ b/jjb/so/so.yaml
@@ -4,7 +4,6 @@
     name: so
     project-name: 'so'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -35,3 +34,13 @@
     mvn-settings: 'so-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: so-clm
+    jobs:
+      - gerrit-maven-clm
+    project: so
+    project-name: 'so'
+    build-node: ubuntu1604-builder-4c-4g
+    branch: 'master'
+    mvn-settings: 'so-settings'
