TESTSUITE-Refactor CLM project block
The clm job portion needs to be on its own
project section similar to the Sonar portion.

The reason behind this, is becuase we only want
this job to be running for master and no other
branches. Also, this is in preparation for the
work that is to come from global-jjb on application
names in CLM.

Change-Id: I25bbd84c898464c2b1955e4892b5b9a43c037efe
Issue-ID: CIMAN-213
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/testsuite/testsuite-heatbridge-master.yaml
+++ b/jjb/testsuite/testsuite-heatbridge-master.yaml
@@ -7,7 +7,6 @@
           path: '.'
           pattern: '**'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
     project: 'testsuite/heatbridge'
@@ -18,3 +17,13 @@
     files: '**'
     archive-artifacts: ''
     build-node: ubuntu1604-builder-4c-4g
+
+- project:
+    name: testsuite-heatbridge-master-clm
+    jobs:
+      - gerrit-maven-clm
+    project: testsuite/heatbridge
+    project-name: 'testsuite-heatbridge'
+    build-node: ubuntu1604-builder-4c-4g
+    branch: 'master'
+    mvn-settings: 'testsuite-heatbridge-settings'
