--- a/jjb/usecaseui/usecase-ui-server.yaml
+++ b/jjb/usecaseui/usecase-ui-server.yaml
@@ -9,7 +9,6 @@
           branch: 'master'
     mvn-settings: 'usecase-ui-server-settings'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -33,3 +32,13 @@
     mvn-settings: 'usecase-ui-server-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: usecase-ui-server-clm
+    jobs:
+      - gerrit-maven-clm
+    project: usecase-ui/server
+    project-name: 'usecase-ui-server'
+    build-node: ubuntu1604-builder-4c-4g
+    branch: 'master'
+    mvn-settings: 'usecase-ui-server-settings'
