--- a/jjb/usecaseui/usecase-ui.yaml
+++ b/jjb/usecaseui/usecase-ui.yaml
@@ -9,7 +9,6 @@
           branch: 'master'
     mvn-settings: 'usecase-ui-settings'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -20,3 +19,13 @@
     docker-pom: 'pom.xml'
     mvn-profile: docker
     build-node: ubuntu1604-builder-4c-4g
+
+- project:
+    name: usecase-ui-clm
+    jobs:
+      - gerrit-maven-clm
+    project: usecase-ui
+    project-name: 'usecase-ui'
+    build-node: ubuntu1604-builder-4c-4g
+    branch: 'master'
+    mvn-settings: 'usecase-ui-settings'
