VFC-Refactor CLM project block
The clm job portion needs to be on its own
project section similar to the Sonar portion.

The reason behind this, is becuase we only want
this job to be running for master and no other
branches. Also, this is in preparation for the
work that is to come from global-jjb on application
names in CLM.

Change-Id: I28975b8279fa0b1f2f6fb57b76468db366e800e2
Issue-ID: CIMAN-213
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/vfc/vfc-gvnfm-vnflcm-java.yaml
+++ b/jjb/vfc/vfc-gvnfm-vnflcm-java.yaml
@@ -13,7 +13,6 @@
           pom: 'lcm/pom.xml'
           pattern: 'lcm/**'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -39,3 +38,13 @@
     mvn-settings: 'vfc-gvnfm-vnflcm-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: vfc-gvnfm-vnflcm-java-clm
+    jobs:
+      - gerrit-maven-clm
+    project: vfc/gvnfm/vnflcm
+    project-name: 'vfc-gvnfm-vnflcm'
+    build-node: centos7-redis-4c-4g
+    branch: 'master'
+    mvn-settings: 'vfc-gvnfm-vnflcm-settings'
