--- a/jjb/vfc/vfc-gvnfm-vnfmgr-java.yaml
+++ b/jjb/vfc/vfc-gvnfm-vnfmgr-java.yaml
@@ -12,7 +12,6 @@
           pom: 'mgr/pom.xml'
           pattern: 'mgr/**'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -38,3 +37,13 @@
     mvn-settings: 'vfc-gvnfm-vnfmgr-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: vfc-gvnfm-vnfmgr-java-clm
+    jobs:
+      - gerrit-maven-clm
+    project: vfc/gvnfm/vnfmgr
+    project-name: 'vfc-gvnfm-vnfmgr'
+    build-node: ubuntu1604-builder-4c-4g
+    branch: 'master'
+    mvn-settings: 'vfc-gvnfm-vnfmgr-settings'
