--- a/jjb/vfc/vfc-nfvo-driver-ems-java.yaml
+++ b/jjb/vfc/vfc-nfvo-driver-ems-java.yaml
@@ -13,7 +13,6 @@
           pom: 'ems/pom.xml'
           pattern: 'ems/**'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -38,3 +37,13 @@
     mvn-settings: 'vfc-nfvo-driver-ems-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: vfc-nfvo-driver-ems-java-clm
+    jobs:
+      - gerrit-maven-clm
+    project: vfc/nfvo/driver/ems
+    project-name: 'vfc-nfvo-driver-ems'
+    build-node: ubuntu1604-builder-4c-4g
+    branch: 'master'
+    mvn-settings: 'vfc-nfvo-driver-ems-settings'
