--- a/jjb/vfc/vfc-gvnfm-vnfres-java.yaml
+++ b/jjb/vfc/vfc-gvnfm-vnfres-java.yaml
@@ -13,7 +13,6 @@
           pom: 'res/pom.xml'
           pattern: 'res/**'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -39,3 +38,13 @@
     mvn-settings: 'vfc-gvnfm-vnfres-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: vfc-gvnfm-vnfres-java-clm
+    jobs:
+      - gerrit-maven-clm
+    project: vfc/gvnfm/vnfres
+    project-name: 'vfc-gvnfm-vnfres'
+    build-node: ubuntu1604-builder-4c-4g
+    branch: 'master'
+    mvn-settings: 'vfc-gvnfm-vnfres-settings'
