--- a/jjb/vfc/vfc-nfvo-driver-sfc.yaml
+++ b/jjb/vfc/vfc-nfvo-driver-sfc.yaml
@@ -12,7 +12,6 @@
           pom: 'zte/sfc-driver/pom.xml'
           pattern: 'zte/sfc-driver/**'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{stream}-{subproject}-release-version-java-daily'
@@ -38,3 +37,13 @@
     mvn-settings: 'vfc-nfvo-driver-sfc-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: vfc-nfvo-driver-sfc-clm
+    jobs:
+      - gerrit-maven-clm
+    project: vfc/nfvo/driver/sfc
+    project-name: 'vfc-nfvo-driver-sfc'
+    build-node: ubuntu1604-builder-4c-4g
+    branch: 'master'
+    mvn-settings: 'vfc-nfvo-driver-sfc-settings'
