--- a/jjb/vfc/vfc-nfvo-driver-vnfm-gvnfm-java.yaml
+++ b/jjb/vfc/vfc-nfvo-driver-vnfm-gvnfm-java.yaml
@@ -13,7 +13,6 @@
           pom: 'gvnfmadapter/pom.xml'
           pattern: 'gvnfmadapter/**'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{stream}-{subproject}-release-version-java-daily'
@@ -39,3 +38,13 @@
     mvn-settings: 'vfc-nfvo-driver-vnfm-gvnfm-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: vfc-nfvo-driver-vnfm-gvnfm-java-clm
+    jobs:
+      - gerrit-maven-clm
+    project: vfc/nfvo/driver/vnfm/gvnfm
+    project-name: 'vfc-nfvo-driver-vnfm-gvnfm'
+    build-node: ubuntu1604-builder-4c-4g
+    branch: 'master'
+    mvn-settings: 'vfc-nfvo-driver-vnfm-gvnfm-settings'
