--- a/jjb/vfc/vfc-nfvo-resmanagement.yaml
+++ b/jjb/vfc/vfc-nfvo-resmanagement.yaml
@@ -9,7 +9,6 @@
           branch: 'master'
     build-node: ubuntu1604-builder-4c-4g
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -31,3 +30,13 @@
     mvn-settings: 'vfc-nfvo-resmanagement-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: vfc-nfvo-resmanagement-clm
+    jobs:
+      - gerrit-maven-clm
+    project: vfc/nfvo/resmanagement
+    project-name: 'vfc-nfvo-resmanagement'
+    build-node: ubuntu1604-builder-4c-4g
+    branch: 'master'
+    mvn-settings: 'vfc-nfvo-resmanagement-settings'
