VNFSDK-Refactor CLM project block
The clm job portion needs to be on its own
project section similar to the Sonar portion.

The reason behind this, is becuase we only want
this job to be running for master and no other
branches. Also, this is in preparation for the
work that is to come from global-jjb on application
names in CLM.

Change-Id: I8061cddf7d77c7eab1f243f6960ac15a5248a974
Issue-ID: CIMAN-213
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/vnfsdk/vnfsdk-dovetail-integration-python.yaml
+++ b/jjb/vnfsdk/vnfsdk-dovetail-integration-python.yaml
@@ -17,7 +17,6 @@
     mvn-settings: 'vnfsdk-dovetail-integration-settings'
     build-node: ubuntu1604-builder-4c-4g
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-{subproject}-verify-python'
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{subproject}-python-staging-{stream}'
@@ -47,3 +46,13 @@
     project: 'vnfsdk/dovetail-integration'
     project-name: 'vnfsdk-dovetail-integration'
     branch: 'master'
+
+- project:
+    name: vnfsdk-dovetail-integration-clm
+    jobs:
+      - gerrit-maven-clm
+    project: vnfsdk/dovetail-integration
+    project-name: 'vnfsdk-dovetail-integration'
+    build-node: ubuntu1604-builder-4c-4g
+    branch: 'master'
+    mvn-settings: 'vnfsdk-dovetail-integration-settings'
