--- a/jjb/vnfsdk/vnfsdk-ves-agent.yaml
+++ b/jjb/vnfsdk/vnfsdk-ves-agent.yaml
@@ -7,8 +7,6 @@
           pom: 'veslibrary/ves_javalibrary/evel_javalib2/pom.xml'
           pattern: 'veslibrary/**'
     jobs:
-      - gerrit-maven-clm:
-          mvn-params: '-f veslibrary/ves_javalibrary/evel_javalib2/pom.xml'
       - '{project-name}-{stream}-verify-java':
           mvn-params: '-f veslibrary/ves_javalibrary/evel_javalib2/pom.xml'
       - '{project-name}-{stream}-{subproject}-verify-java'
@@ -44,3 +42,14 @@
     project: 'vnfsdk/ves-agent'
     project-name: 'vnfsdk-ves-agent'
     branch: 'master'
+
+- project:
+    name: vnfsdk-ves-agent-clm
+    jobs:
+      - gerrit-maven-clm:
+         mvn-params: '-f veslibrary/ves_javalibrary/evel_javalib2/pom.xml'
+    project: vnfsdk/ves-agent
+    project-name: 'vnfsdk-ves-agent'
+    build-node: ubuntu1604-builder-4c-4g
+    branch: 'master'
+    mvn-settings: 'vnfsdk-ves-agent-settings'
