Add missing azure CSIT verify job
Change-Id: I2243b875171e25e337117179ffd441aaca3a5ace
Issue-ID: INT-686
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/multicloud/multicloud-azure-csit.yaml
+++ b/jjb/multicloud/multicloud-azure-csit.yaml
@@ -2,6 +2,7 @@
 - project:
     name: multicloud-azure-csit
     jobs:
+      - '{project-name}-{stream}-verify-csit-{functionality}'
       - '{project-name}-{stream}-csit-{functionality}'
     project-name: 'multicloud-azure'
     stream: 'master'
