Fetch CLM updates from global-jjb
Update global-jjb submodule to HEAD to fetch
submodule-timeout feature.

Add submodule-timeout on local jjb templates
using the lf-infra-gerrit-scm macro as the global-jjb
upgrade has this breaking change.

Change-Id: I15e478d0c44f11eba4f98400e726d5c8dd6616d1
Issue-ID: CIMAN-33
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/onap-jjb/onap-pypi-template.yaml
+++ b/jjb/onap-jjb/onap-pypi-template.yaml
@@ -49,6 +49,7 @@
           refspec: '$GERRIT_REFSPEC'
           branch: '$GERRIT_BRANCH'
           submodule-recursive: true
+          submodule-timeout: 10
           choosing-strategy: default
 
     wrappers:
