--- a/jjb/onap-jjb/onap-pypi-template.yaml
+++ b/jjb/onap-jjb/onap-pypi-template.yaml
@@ -20,6 +20,8 @@
       - compare-type: ANT
         pattern: '**'
 
+    submodule-timeout: 10
+
     #####################
     # Job Configuration #
     #####################
@@ -49,6 +51,7 @@
           refspec: '$GERRIT_REFSPEC'
           branch: '$GERRIT_BRANCH'
           submodule-recursive: true
+          submodule-timeout: '{submodule-timeout}'
           choosing-strategy: default
 
     wrappers:
