Fix global-templates unstable jobs
Add lf-infra-pre-build build step in local
global-templates to successfully
install lftools and avoid unstable jobs.

Change-Id: I1a41e121b810371c1be987aaafec3c4b0aaa5e89
Issue-ID: CIMAN-33
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/global-templates-c.yaml
+++ b/jjb/global-templates-c.yaml
@@ -44,6 +44,7 @@
           files: '**'
 
     builders:
+      - lf-infra-pre-build
       - shell: '{script}'
 
     publishers:
@@ -93,6 +94,7 @@
           branch: '{branch}'
 
     builders:
+      - lf-infra-pre-build
       - provide-maven-settings:
           global-settings-file: 'global-settings'
           settings-file: '{mvn-settings}'
