--- a/jjb/global-templates-docker.yaml
+++ b/jjb/global-templates-docker.yaml
@@ -101,6 +101,7 @@
     <<: *docker_merge_boiler_plate
 
     builders:
+      - lf-infra-pre-build
       - lf-infra-docker-login:
           global-settings-file: 'global-settings'
           settings-file: '{mvn-settings}'
@@ -141,6 +142,7 @@
     <<: *docker_merge_boiler_plate
 
     builders:
+      - lf-infra-pre-build
       - lf-infra-docker-login:
           global-settings-file: 'global-settings'
           settings-file: '{mvn-settings}'
@@ -186,6 +188,7 @@
     <<: *docker_verify_boiler_plate
 
     builders:
+      - lf-infra-pre-build
       - lf-infra-docker-login:
           global-settings-file: 'global-settings'
           settings-file: '{mvn-settings}'
@@ -228,6 +231,7 @@
     <<: *docker_verify_boiler_plate
 
     builders:
+      - lf-infra-pre-build
       - lf-infra-docker-login:
           global-settings-file: 'global-settings'
           settings-file: '{mvn-settings}'
@@ -279,6 +283,7 @@
           choosing-strategy: default
 
     builders:
+      - lf-infra-pre-build
       - lf-infra-docker-login:
           global-settings-file: 'global-settings'
           settings-file: '{mvn-settings}'
@@ -338,6 +343,7 @@
           choosing-strategy: default
 
     builders:
+      - lf-infra-pre-build
       - lf-infra-docker-login:
           global-settings-file: 'global-settings'
           settings-file: '{mvn-settings}'
@@ -382,6 +388,7 @@
     <<: *docker_merge_boiler_plate
 
     builders:
+      - lf-infra-pre-build
       - lf-infra-docker-login:
           global-settings-file: 'global-settings'
           settings-file: '{mvn-settings}'
@@ -419,6 +426,7 @@
     <<: *docker_merge_boiler_plate
 
     builders:
+      - lf-infra-pre-build
       - lf-infra-docker-login:
           global-settings-file: 'global-settings'
           settings-file: '{mvn-settings}'
@@ -464,6 +472,7 @@
     <<: *docker_verify_boiler_plate
 
     builders:
+      - lf-infra-pre-build
       - lf-infra-docker-login:
           global-settings-file: 'global-settings'
           settings-file: '{mvn-settings}'
@@ -502,6 +511,7 @@
     <<: *docker_verify_boiler_plate
 
     builders:
+      - lf-infra-pre-build
       - lf-infra-docker-login:
           global-settings-file: 'global-settings'
           settings-file: '{mvn-settings}'
@@ -553,6 +563,7 @@
           choosing-strategy: default
 
     builders:
+      - lf-infra-pre-build
       - lf-infra-docker-login:
           global-settings-file: 'global-settings'
           settings-file: '{mvn-settings}'
@@ -612,6 +623,7 @@
           choosing-strategy: default
 
     builders:
+      - lf-infra-pre-build
       - lf-infra-docker-login:
           global-settings-file: 'global-settings'
           settings-file: '{mvn-settings}'
@@ -668,6 +680,7 @@
           choosing-strategy: default
 
     builders:
+      - lf-infra-pre-build
       - lf-infra-docker-login:
           global-settings-file: 'global-settings'
           settings-file: '{mvn-settings}'
@@ -719,6 +732,7 @@
           choosing-strategy: default
 
     builders:
+      - lf-infra-pre-build
       - lf-infra-docker-login:
           global-settings-file: 'global-settings'
           settings-file: '{mvn-settings}'
