--- a/jjb/global-templates-python.yaml
+++ b/jjb/global-templates-python.yaml
@@ -53,6 +53,7 @@
           files: '{pattern}'
 
     builders:
+      - lf-infra-pre-build
       - provide-maven-settings:
           global-settings-file: 'global-settings'
           settings-file: '{mvn-settings}'
@@ -137,6 +138,7 @@
           files: '**'
 
     builders:
+      - lf-infra-pre-build
       - provide-maven-settings:
           global-settings-file: 'global-settings'
           settings-file: '{mvn-settings}'
