--- a/jjb/global-templates-script.yaml
+++ b/jjb/global-templates-script.yaml
@@ -47,6 +47,7 @@
           files: '**'
 
     builders:
+      - lf-infra-pre-build
       - provide-maven-settings:
           global-settings-file: 'global-settings'
           settings-file: '{mvn-settings}'
@@ -122,6 +123,7 @@
           files: '**'
 
     builders:
+      - lf-infra-pre-build
       - provide-maven-settings:
           global-settings-file: 'global-settings'
           settings-file: '{mvn-settings}'
@@ -193,6 +195,7 @@
           files: '**'
 
     builders:
+      - lf-infra-pre-build
       - provide-maven-settings:
           global-settings-file: 'global-settings'
           settings-file: '{mvn-settings}'
@@ -260,6 +263,7 @@
           branch: '{branch}'
 
     builders:
+      - lf-infra-pre-build
       - provide-maven-settings:
           global-settings-file: 'global-settings'
           settings-file: '{mvn-settings}'
@@ -315,6 +319,7 @@
           build-timeout: '{build-timeout}'
 
     builders:
+      - lf-infra-pre-build
       - provide-maven-settings:
           global-settings-file: 'global-settings'
           settings-file: '{mvn-settings}'
