Add golang 1.11 wrapper
Add support for golang 1.11
renamed old golang to golang110

Issue-ID: CIMAN-216
Change-Id: I771f8291b376d4406fd530bf97bb882171f1c936
Signed-off-by: Kiran Kamineni <kiran.k.kamineni@intel.com>

--- a/jjb/global-macros.yaml
+++ b/jjb/global-macros.yaml
@@ -469,12 +469,21 @@
           fail: true
 
 - wrapper:
-    name: golang
+    name: golang110
     wrappers:
       - raw:
           xml: |
             <org.jenkinsci.plugins.golang.GolangBuildWrapper plugin="golang@1.2">
             <goVersion>Golang 1.10</goVersion>
+            </org.jenkinsci.plugins.golang.GolangBuildWrapper>
+
+- wrapper:
+    name: golang111
+    wrappers:
+      - raw:
+          xml: |
+            <org.jenkinsci.plugins.golang.GolangBuildWrapper plugin="golang@1.2">
+            <goVersion>Golang 1.11</goVersion>
             </org.jenkinsci.plugins.golang.GolangBuildWrapper>
 
 - wrapper:
