--- a/jjb/vid/vid.yaml
+++ b/jjb/vid/vid.yaml
@@ -11,6 +11,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'vid-settings'
     files: '**'
     archive-artifacts: ''
@@ -27,6 +29,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'vid-settings'
     files: '**'
     archive-artifacts: ''
